fix(Placeholder): cleanup stretched styling
Удаляем не обоснованный `padding-block: inherit` у `stretched` режима

--- a/packages/vkui/src/components/Placeholder/Placeholder.module.css
+++ b/packages/vkui/src/components/Placeholder/Placeholder.module.css
@@ -14,7 +14,6 @@
 
 .Placeholder--stretched {
   flex: 1 0;
-  padding-block: inherit;
   block-size: 100%;
 }
 
